--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<title>Color Game</title>
-	<link rel="stylesheet" type="text/css" href="colorGame.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
+	<meta name="keywords" content="html,web design,game,colors" >
+    	<meta name="description" content="welcome to the colors Game">
+    <meta name="author" content="Harish Prasad">
 </head>
 <body>
 <h1>
@@ -29,6 +32,6 @@
 		<div class="square"></div>
 	</div>
 
-<script type="text/javascript" src="colorGame.js"></script>
+<script type="text/javascript" src="/app.js"></script>
 </body>
 </html>
